--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -21,10 +21,10 @@
 
 <body>
   <div class="circle-one">
-    <img src="./images/bg-pattern-top.svg">
+    <img src="./images/bg-pattern-top.svg" alt="top circle">
   </div>
   <div class="circle-two">
-    <img src="./images/bg-pattern-bottom.svg">
+    <img src="./images/bg-pattern-bottom.svg" alt="bottom circle">
   </div>
 
   <div class="container">
@@ -33,7 +33,7 @@
     </div>
 
     <div>
-      <img class="card-img" src="./images/image-victor.jpg">
+      <img class="card-img" src="./images/image-victor.jpg" alt="card image">
     </div>
   </div>
 
